--- a/src/forms/ui_EditEntryDlg.ui
+++ b/src/forms/ui_EditEntryDlg.ui
@@ -80,7 +80,7 @@
             <string>120 Bits</string>
         </property>
     </widget>
-    <widget class="QPushButton">
+    <widget class="QToolButton">
         <property name="name">
             <cstring>ButtonDeleteAttachment</cstring>
         </property>
@@ -99,7 +99,7 @@
             <pixmap>image0</pixmap>
         </property>
     </widget>
-    <widget class="QPushButton">
+    <widget class="QToolButton">
         <property name="name">
             <cstring>ButtonGenPw</cstring>
         </property>
@@ -205,7 +205,7 @@
             <string>Icon:</string>
         </property>
     </widget>
-    <widget class="QPushButton">
+    <widget class="QToolButton">
         <property name="name">
             <cstring>ButtonEchoMode</cstring>
         </property>
@@ -220,11 +220,8 @@
         <property name="text">
             <string>...</string>
         </property>
-        <property name="flat">
-            <bool>false</bool>
-        </property>
     </widget>
-    <widget class="QPushButton">
+    <widget class="QToolButton">
         <property name="name">
             <cstring>ButtonSaveAttachment</cstring>
         </property>
@@ -243,7 +240,7 @@
             <pixmap>image1</pixmap>
         </property>
     </widget>
-    <widget class="QPushButton">
+    <widget class="QToolButton">
         <property name="name">
             <cstring>ButtonOpenAttachment</cstring>
         </property>
