menu item (de)activation for selection modes of group/entry view
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@10 b624d157-de02-0410-bad0-e51aec6abb33

--- a/src/forms/MainWindow.ui
+++ b/src/forms/MainWindow.ui
@@ -158,7 +158,7 @@
     <addaction name="separator" />
     <addaction name="EditPasswordToClipboardAction" />
     <addaction name="EditUsernameToClipboardAction" />
-    <addaction name="ActionOpenUrl" />
+    <addaction name="OpenUrlAction" />
     <addaction name="EditSaveAttachmentAction" />
     <addaction name="separator" />
     <addaction name="EditNewEntryAction" />
@@ -284,7 +284,7 @@
     <string>Benutzername in Zwischenablage kopieren</string>
    </property>
   </action>
-  <action name="ActionOpenUrl" >
+  <action name="OpenUrlAction" >
    <property name="text" >
     <string>URL öffnen</string>
    </property>
