--- a/src/forms/MainWindow.ui
+++ b/src/forms/MainWindow.ui
@@ -158,7 +158,7 @@
     <addaction name="separator" />
     <addaction name="EditPasswordToClipboardAction" />
     <addaction name="EditUsernameToClipboardAction" />
-    <addaction name="OpenUrlAction" />
+    <addaction name="EditOpenUrlAction" />
     <addaction name="EditSaveAttachmentAction" />
     <addaction name="separator" />
     <addaction name="EditNewEntryAction" />
@@ -284,7 +284,7 @@
     <string>Benutzername in Zwischenablage kopieren</string>
    </property>
   </action>
-  <action name="OpenUrlAction" >
+  <action name="EditOpenUrlAction" >
    <property name="text" >
     <string>URL öffnen</string>
    </property>
@@ -328,16 +328,16 @@
  <pixmapfunction></pixmapfunction>
  <customwidgets>
   <customwidget>
-   <class>KeepassEntryView</class>
+   <class>KeepassGroupView</class>
    <extends>QTreeWidget</extends>
-   <header>../../src/lib/EntryView.h</header>
+   <header>../../src/lib/GroupView.h</header>
    <container>0</container>
    <pixmap></pixmap>
   </customwidget>
   <customwidget>
-   <class>KeepassGroupView</class>
+   <class>KeepassEntryView</class>
    <extends>QTreeWidget</extends>
-   <header>../../src/lib/GroupView.h</header>
+   <header>../../src/lib/EntryView.h</header>
    <container>0</container>
    <pixmap></pixmap>
   </customwidget>
